create test degusta box

--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -2,20 +2,14 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ path('home') }}">Finizens</a>
+        <a class="navbar-brand" href="{{ path('tasks') }}">Degusta Box</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link {{ (routeActive == 'home') ? 'active' : '' }}" href="{{ path('home') }}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link {{ (routeActive == 'list_clients') ? 'active' : '' }}" href="{{ path('list_clients') }}">Clientes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link {{ (routeActive == 'list_orders') ? 'active' : '' }}" href="{{ path('list_orders') }}">Pedidos</a>
+                    <a class="nav-link {{ (routeActive == 'tasks') ? 'active' : '' }}" href="{{ path('tasks') }}">Tareas</a>
                 </li>
             </ul>
         </div>
