--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}My Test Finizens{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}My Test Degusta Box{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
@@ -11,12 +12,14 @@
     <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.13.2/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.13.2/js/dataTables.bootstrap5.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script type="text/javascript" class="init">
         $(document).ready(function () {
-            $('#finizens-table').DataTable({
+            $('#task-table').DataTable({
+                order: [],
                 info: false,
                 lengthMenu: [
-                    [10, 25,-1],
+                    [10, 25, -1],
                     [10, 25, 'Todos'],
                 ],
                 language: {
@@ -48,6 +51,10 @@
 {% include 'components/navbar.html.twig' %}
 
 <div style="padding: 50px;">
+    {% block style_extra %}
+
+    {% endblock %}
+
     {% block body %}
 
     {% endblock %}
